{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 6,
  "lineage": "509aabb2-c503-e0af-11fa-649a9f3421f2",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:vpc/vpc-3cb15b57",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-30fd095b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-8a1bd7e1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-3cb15b57",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-d87ccfb3",
            "owner_id": "769968205550",
            "state": "available"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "wep_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-021663d23d7693174",
            "domain": "vpc",
            "id": "eipalloc-0459330d3a36bc977",
            "instance": "i-0e3ef82e552cb801a",
            "network_interface": "eni-0e7d14854af32bd31",
            "private_dns": "ip-172-31-18-229.us-east-2.compute.internal",
            "private_ip": "172.31.18.229",
            "public_dns": "ec2-18-190-62-165.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.62.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test_terraform-eip"
            },
            "vpc": true
          },
          "depends_on": [
            "aws_instance.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bfd7d13d424429f7",
            "arn": "arn:aws:ec2:us-east-2:769968205550:instance/i-0e3ef82e552cb801a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e3ef82e552cb801a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test_terraform-Keypair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7d14854af32bd31",
            "private_dns": "ip-172-31-18-229.us-east-2.compute.internal",
            "private_ip": "172.31.18.229",
            "public_dns": "ec2-18-224-24-246.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.24.246",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0fd2783ef41d24504",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "test_terraform-allow_HTTP",
              "test_terraform-allow_SSH"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-5b8cc421",
            "tags": {
              "Name": "test_terraform-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0775d59dde12eb8ae",
              "sg-080a4458a82cffc32"
            ]
          },
          "depends_on": [
            "aws_key_pair.keypair",
            "aws_security_group.allow_HTTP",
            "aws_security_group.allow_SSH",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_HTTP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:security-group/sg-0775d59dde12eb8ae",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0775d59dde12eb8ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test_terraform-allow_HTTP",
            "name_prefix": null,
            "owner_id": "769968205550",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3cb15b57"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_SSH",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:769968205550:security-group/sg-080a4458a82cffc32",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080a4458a82cffc32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test_terraform-allow_SSH",
            "name_prefix": null,
            "owner_id": "769968205550",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-3cb15b57"
          },
          "depends_on": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}